<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcome_txv"
        android:text="@string/welcome"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/please_enter_txv"
        android:text="@string/please_enter_telephone_or_email"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome_txv"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:id="@+id/error_txv"
        android:layout_below="@id/please_enter_txv"
        android:layout_marginTop="8dp"
        android:text="You should enter telephone or email!"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_below="@+id/error_txv"
        android:layout_marginTop="32dp"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:id="@+id/email_et"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"/>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_below="@+id/email_et"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:maxLines="1"
        android:layout_marginRight="16dp"
        android:imeOptions="actionDone"
        android:id="@+id/telephone_et"
        android:layout_height="wrap_content"
        android:hint="@string/telephone_hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_below="@id/telephone_et"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:id="@+id/progress_bar"/>

</RelativeLayout>