<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.testproject.testproject.modules.main.activity.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content_frame"
        android:layout_above="@+id/separator"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/separator"
        android:background="@android:color/darker_gray"
        android:layout_above="@+id/bottom_tab_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/bottom_tab_bar"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/feed_btn"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/selected_tab"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/news_txv"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:text="@string/news_label"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@android:color/darker_gray"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/my_news_btn"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/unselected_tab"
                android:layout_height="wrap_content"
                android:id="@+id/my_news_txv"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:text="@string/my_news_label"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@android:color/darker_gray"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/profile_btn"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/unselected_tab"
                android:id="@+id/profile_txv"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="@string/profile_label"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
